# adctf-2025-challenges

./: .gitignore  README.md  pack-artifacts.sh
calc/: README.md
calc/source/: Dockerfile  calc.py
challenges/calc/writeup/: README.md
challenges/cspyshell/: README.md
challenges/cspyshell/source/: emulator.py  shell.py
challenges/cspyshell/writeup/: README.md
challenges/ezenc/writeup/: README.md
challenges/flag-mosaic/source/: COPYRIGHT.md
challenges/flag-mosaic/writeup/: README.md
challenges/gdutqa/: README.md
challenges/more-jump-more/source/: core.h  main.c
challenges/more-jump-more/writeup/: README.md
challenges/nekoqa/writeup/: README.md
challenges/pacman-ol/: README.md
challenges/phf/: README.md
challenges/slowugi-downloader/: README.md
cspyshell/source/: build.sh  flag.txt  requirements.txt
ezenc/: README.md
ezenc/source/: build.txt  encrypt.py  main.c
flag-mosaic/: README.md
flag-mosaic/writeup/: README.md
gdutqa/source/: start.sh
gdutqa/writeup/: README.md
more-jump-more/: README.md
more-jump-more/source/: build.txt  core-obf.asm  core.asm  encrypt.py  obfuscator.py
more-jump-more/writeup/: README.md
nekoqa/: README.md
nekoqa/source/: Dockerfile
nekoqa/source/server/: pyproject.toml
nekoqa/writeup/: README.md
phf/source/: start.sh
scripts/: pack-artifacts.sh
secure-account/: README.md
secure-account/source/: Dockerfile  start.sh
secure-account/writeup/: README.md
slowugi-downloader/source/: Dockerfile  start.sh
yajusenpai/: README.md
yajusenpai/source/: base114_encode.py  main.py
(+58 files in other folders)
