[project]
name = "nekoqa"
version = "0.0.0"
description = ""
authors = [
    {name = "Ricky8955555", email = "rkmiao@duck.com"},
]
dependencies = [
    "pydantic~=2.0",
    "pydantic-yaml~=1.4.0",
    "starlette~=0.46.0",
    "uvicorn>=0.34.1",
    "jinja2~=3.0",
]
requires-python = "==3.12.*"
license = {file = "LICENSE"}

[project.optional-dependencies]
report = [
    "httpx>=0.28.1",
]
[tool.black]
line-length = 100

[tool.isort]
line_length = 100
skip = [".venv"]
profile = "black"

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "black>=25.1.0",
]
